# ters

./: .gitignore  Cargo.toml  README.md
aterms/: Cargo.toml
aterms/src/: lib.rs
rewriter/: Cargo.toml
rewriter/src/parser/: parser.rs
rewriter/std/: prelude.rw
src/: bin.rs
src/interp/: interp.rs
src/parser/: parser.rs  rwfile.rs
std/: prelude.rw
ters/: Cargo.toml
ters/examples/: test.rw
ters/src/: bin.rs  lib.rs
ters/src/interp/: interp.rs
ters/src/parser/: parser.rs  rwfile.rs
ters/std/: prelude.rw
ters/tests/: fn_application_tests.rs  pattern_tests.rs  prelude_tests.rs
tests/: fn_application_tests.rs  pattern_tests.rs  prelude_tests.rs
