[package]
name = "ters"
version = "0.1.0"
authors = ["Matthijs Bijman <matthijs@bijman.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench-instrumentation = []

[dependencies]
clap = "2.33.3"
nom = "6.0.0"
itertools = "0.9.0"

[dependencies.aterms]
path = "../aterms"
version = "0.1.0"

[lib]
name = "ters"
path = "src/lib.rs"

[[bin]]
name = "ters"
path = "src/bin.rs"